argocd/applications/ats-website/backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ats-backend
  namespace: prod-infra
spec:
  selector:
    app.kubernetes.io/name: ats-backend
  ports:
    - port: 8080
      targetPort: 8080
      name: http
