argocd/applications/ats-website/frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ats-frontend
  namespace: prod-ats
spec:
  selector:
    app.kubernetes.io/name: ats-frontend
  ports:
    - port: 3000
      targetPort: 3000
      name: http
